--- a/guessButton.html
+++ b/guessButton.html
@@ -5,7 +5,6 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
       <title>Guess the button</title>
-      <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
       <script src="script.js"></script>
    </head>
    <body>
@@ -16,9 +15,9 @@
                <div class="mb-3">
                   <h5 class="card-title">GUESS THE BUTTON</h5>
                   <br>
-                  <button type = "button" class = "btn btn-outline-warning las la-play" onclick = "return addBtnPlay();">Play the game</button>
+                  <button type = "button" class = "btn btn-outline-warning las la-play" onclick = "addBtnPlay()">Play the game</button>
                </div>
-               <a href="#" class="btn btn-primary" onclick="return refreshPage();">Refresh</a>
+               <a href="#" class="btn btn-primary" onclick="refreshPage()">Refresh</a>
             </form>
          </div>
       </div>
@@ -38,7 +37,7 @@
                <br>
                <input type="number" class="form-control-little" id="number_entered">
             </div>
-            <a href="#" class="btn btn-primary" onclick="return addButtons();">Add buttons</a>
+            <a href="#" class="btn btn-primary" onclick="return addButtons()">Add buttons</a>
          </form>
       </div>
       <div class="card text-center">
@@ -51,7 +50,6 @@
       </div>
       </div>
       </div>
-      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
    </body>
 </html>
